fix: styling of task items and distorted done button for project task item caused by the same problem for task item

--- a/src/components/app-components/project-components/project-task-item/projectTaskItem.module.scss
+++ b/src/components/app-components/project-components/project-task-item/projectTaskItem.module.scss
@@ -5,15 +5,17 @@
   box-shadow: 1px 3px 10px 1px rgba($color: #000000, $alpha: 0.2);
   padding: 0.8em 0.6em;
   h3 {
-    font-size: .9rem;
+    font-size: 0.9rem;
     font-weight: 300;
-    text-overflow:clip;
+    text-overflow: clip;
   }
 
- p{
-   font-size: .8rem;
- } 
+  p {
+    font-size: 0.8rem;
+  }
+}
 
+.buttonContainer {
   button {
     margin-right: 1em;
     @extend .doneBtn;
