--- a/src/components/app-components/task-item/taskItem.module.scss
+++ b/src/components/app-components/task-item/taskItem.module.scss
@@ -24,6 +24,7 @@
   }
 }
 .taskContentContainer {
+  flex: 1 1 auto;
   & > *:not(:last-child) {
     margin-bottom: 0.5em;
   }
